Phase 5: introduce service layer with transactional business logic